--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="primary">#fec93b</color>
     <color name="secondary">#084595</color>
     <color name="green">#4CAF50</color>
+    <color name="live">#76E87B</color>
 </resources>
