--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,10 +9,11 @@
         <item name="colorSecondaryVariant">@color/secondary</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >@color/primary</item>
+        <item name="android:statusBarColor">@color/primary</item>
         <!--        Text color-->
         <item name="android:textColor">@color/black</item>
     </style>
+
     <style name="Theme.Genie.Social" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary</item>
@@ -23,9 +24,14 @@
         <item name="colorSecondaryVariant">@color/secondary</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >@color/primary</item>
+        <item name="android:statusBarColor">@color/primary</item>
         <!--        Text color-->
         <item name="android:textColor">@color/black</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="ThemeOverlay.Genie.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_900</item>
+        <item name="fullscreenTextColor">@color/light_blue_A400</item>
     </style>
 </resources>
