--- a/app/src/main/res/layout/sample_social_post_profile.xml
+++ b/app/src/main/res/layout/sample_social_post_profile.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="130dp"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="150dp"
-    android:minHeight="150dp"
-    android:minWidth="130dp"
-    android:src="@drawable/logo"
-    android:scaleType="fitXY"
-    android:id="@+id/post_uploaded"
+    android:layout_width="130dp"
     android:layout_margin="2dp">
-</ImageView>
+    <ImageButton
+        android:layout_width="130dp"
+        android:layout_height="150dp"
+        android:minHeight="150dp"
+        android:background="@color/white"
+        android:maxHeight="150dp"
+        android:minWidth="130dp"
+        android:src="@drawable/logo"
+        android:scaleType="fitXY"
+        android:id="@+id/post_uploaded"/>
+</androidx.cardview.widget.CardView>
