--- a/app/src/main/res/layout/activity_go_live.xml
+++ b/app/src/main/res/layout/activity_go_live.xml
@@ -152,8 +152,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/live_comments_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxHeight="200dp"
+        android:layout_height="180dp"
+        app:stackFromEnd="true"
         android:minHeight="150dp"
         app:layout_constraintTop_toBottomOf="@id/filters_container_view"
         tools:listitem="@layout/sample_live_user_comment"
@@ -210,7 +210,8 @@
         android:id="@+id/add_comment_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/go_live_sound_btn">
+        app:layout_constraintTop_toBottomOf="@+id/go_live_sound_btn"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/current_user_profile"
