--- a/app/src/main/res/layout/activity_view_live.xml
+++ b/app/src/main/res/layout/activity_view_live.xml
@@ -54,9 +54,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/live_comment_rv"
-        android:layout_width="320dp"
-        android:layout_height="0dp"
-        android:maxHeight="350dp"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:maxHeight="250dp"
+        app:stackFromEnd="true"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        android:background="@color/cardview_shadow_end_color"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/add_comment_layout"
         app:layout_constraintStart_toStartOf="@+id/live_viewing"
