--- a/app/src/main/res/layout/sample_live_user_comment.xml
+++ b/app/src/main/res/layout/sample_live_user_comment.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
+    android:layout_marginEnd="10dp"
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/com_user_profile"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:src="@drawable/profile"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="2dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
@@ -19,24 +20,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="\@Shakil Patel"
-        android:textSize="9sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="12sp"
+        android:layout_margin="2dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintStart_toEndOf="@id/com_user_profile"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
-
     <TextView
         android:id="@+id/comment_text"
         android:layout_width="wrap_content"
+        android:maxWidth="200dp"
         android:layout_height="wrap_content"
+        android:layout_margin="2dp"
         android:text="sample comment"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@id/com_user_username"
         app:layout_constraintTop_toTopOf="parent"/>
     <ImageButton
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:background="@drawable/send_icon"
+        app:layout_constraintStart_toEndOf="@id/comment_text"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
